[package]
name = "krunkit"
version = "0.1.4"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
edition = "2021"
description = "CLI tool to start VMs with libkrun"
readme = "README.md"
license = "Apache-2.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
mac_address = "1.1.5"
sysinfo = "0.31.4"
